--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lendigo Microcare - Instant Personal Loans | Fast Approval | RBI Registered NBFC</title>
-    <meta name="description" content="Get instant personal loans with Lendigo Microcare. Fast approval, low interest rates, and flexible repayment. RBI registered NBFC. Apply now for quick cash loans up to ₹1.2 Lakhs." />
+    <title>Lendigo Microcare - Instant Personal Loans | Fast Approval | Regulated Entity</title>
+    <meta name="description" content="Get instant personal loans with Lendigo Microcare. Fast approval, low interest rates, and flexible repayment. Regulated Entity. Apply now for quick cash loans up to ₹1.2 Lakhs." />
     <meta name="keywords" content="instant loan, personal loan, quick cash loan, salary advance, emergency loan, Lendigo Microcare, NBFC" />
     <meta name="author" content="Lendigo Microcare" />
     
     <!-- Open Graph -->
     <meta property="og:title" content="Lendigo Microcare - Instant Personal Loans" />
-    <meta property="og:description" content="Get instant personal loans with fast approval and flexible repayment. RBI registered NBFC." />
+    <meta property="og:description" content="Get instant personal loans with fast approval and flexible repayment. Regulated Entity." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lendigomicrocare.com" />
     
